LogOut and errors added
